--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Spoke Test",
    "main": "index.js",
    "scripts": {
+      "start": "webpack-dev-server -d --watch --hot --open",
       "client:dev": "webpack-dev-server -d --watch --hot --open",
       "client:prod": "webpack -p",
       "sass-lint": "sass-lint client/app/sass/styles.sass --verbose -q",
