--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
    "description": "Spoke Test",
    "main": "index.js",
    "scripts": {
-      "start": "webpack-dev-server -d --watch --hot --open",
-      "client:dev": "webpack-dev-server -d --watch --hot --open",
-      "client:prod": "webpack -p",
+      "start": "webpack-dev-server --hot --open",
+      "client:dev": "webpack-dev-server --hot --open",
+      "client:prod": "webpack",
       "sass-lint": "sass-lint client/app/sass/styles.sass --verbose -q",
       "eslint": "eslint client/app/",
       "flow": "flow",
@@ -22,12 +22,13 @@
       "@babel/polyfill": "7.6.0",
       "@babel/preset-env": "7.6.3",
       "@babel/preset-react": "7.6.3",
-      "ajv": "6.10.2",
+      "@babel/runtime": "7.27.6",
+      "ajv": "^6.12.6",
       "babel-loader": "8.0.6",
-      "core-js": "3.3.2",
       "concurrently": "^5.2.0",
-      "css-loader": "3.2.0",
-      "debug": "4.1.1",
+      "core-js": "3.3.2",
+      "css-loader": "^7.1.2",
+      "debug": "^4.4.1",
       "dotenv": "^8.2.0",
       "es6-promise": "4.2.6",
       "fetch-ie8": "1.5.0",
@@ -40,16 +41,16 @@
       "react-dom": "16.13.1",
       "sass": "1.23.0",
       "sass-loader": "8.0.0",
-      "style-loader": "0.18.2",
-      "webpack": "4.43.0",
-      "webpack-cli": "3.3.11",
-      "webpack-dev-server": "^3.1.4"
+      "style-loader": "^4.0.0",
+      "webpack": "5.99.9",
+      "webpack-cli": "^6.0.1",
+      "webpack-dev-server": "^5.2.2"
    },
    "devDependencies": {
-      "@babel/cli": "7.6.4",
+      "@babel/cli": "^7.27.2",
       "@babel/preset-flow": "7.0.0",
       "babel-eslint": "10.1.0",
-      "babel-jest": "24.9.0",
+      "babel-jest": "^30.0.1",
       "enzyme": "3.11.0",
       "enzyme-adapter-react-16": "1.15.2",
       "eslint": "6.6.0",
@@ -60,8 +61,8 @@
       "eslint-plugin-react-hooks": "1.7.0",
       "eslint-watch": "6.0.1",
       "flow-bin": "0.109.0",
-      "jest": "24.9.0",
-      "jest-cli": "24.9.0",
+      "jest": "^30.0.1",
+      "jest-cli": "^30.0.1",
       "sass-lint": "1.12.1"
    }
 }
